--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                 <!-- <input name="_redirect" type="hidden" id="name" value="#"> -->
 
                 <p class="formHeader">Imię i nazwisko</p>
-                <input type="text" name="" id="" class="nameInput" required>
+                <input type="text" name="text" id="text" class="nameInput" required>
                 
                 <p class="formHeader">E-mail</p>
-                <input type="email" name="" id="" class="emailInput" required>
+                <input type="email" name="email" id="email" class="emailInput" required>
 
                 <p class="formHeader">Wiadomość</p>
-                <textarea class="message" name="" id="" required>Witam! Jestem zainteresowany usługą meblarską. Bardzo proszę o kontakt.</textarea>
+                <textarea class="message" name="message" id="message" required>Witam! Jestem zainteresowany usługą meblarską. Bardzo proszę o kontakt.</textarea>
             
                 <input class="submitBtn" type="submit" value="Prześlij">
 
