--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="contact" id="contact">
             <h1 class="contactTitle">Kontakt</h1>
-            <form class="contact-form" action="https://formsubmit.io/send/jebacdisatetrisa2@wp.pl" onsubmit="return popMessage()">
+            <form class="contact-form" action="https://formsubmit.io/send/jebacdisatetrisa2@wp.pl" onsubmit="return popMessage()" method="POST">
                 <!-- <input name="_redirect" type="hidden" id="name" value="#"> -->
 
                 <p class="formHeader">Imię i nazwisko</p>
