--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script src="https://kit.fontawesome.com/4798a03daf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./chair-solid.svg" type="image/x-icon">
 </head>
 <body>
     <header id="start" class="header">
@@ -37,10 +38,11 @@
 
         <div class="user-info">
             <div class="user-image">
-                <img src="./profile-circle-svgrepo-com.svg" alt="">
+                <img src="./profilephoto.png" class="profile-photo" alt="">
             </div>
             <div class="user-desc">
-                <p>Witam! <br> Nazywam się Krzysztof Górski. Od X lat zajmuję się usługami stolarskimi. </p>
+                <p>Witam! <br>
+                    Nazywam się Krzysztof Górski. Od 8 lat zajmuję się usługami stolarskimi, takimi jak renowacja mebli i nie tylko. Zachęcam do kontaktu.</p>
             </div>
         </div>
 
