--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="contact" id="contact">
             <h1 class="contactTitle">Kontakt</h1>
             <form class="contact-form" action="https://formsubmit.io/send/jebacdisatetrisa2@wp.pl" onsubmit="return popMessage()" method="POST">
-                <!-- <input name="_redirect" type="hidden" id="name" value="#"> -->
+
 
                 <p class="formHeader">Imię i nazwisko</p>
                 <input type="text" name="text" id="text" class="nameInput" required>
@@ -83,7 +83,7 @@
                 <input type="email" name="email" id="email" class="emailInput" required>
 
                 <p class="formHeader">Wiadomość</p>
-                <textarea class="message" name="message" id="message" required>Witam! Jestem zainteresowany usługą meblarską. Bardzo proszę o kontakt.</textarea>
+                <textarea class="message" name="message" id="message" required>Witam! Jestem zainteresowany usługami stolarskimi. Bardzo proszę o kontakt.</textarea>
             
                 <input class="submitBtn" type="submit" value="Prześlij">
 
