--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
 
                 <input name="_formsubmit_id" type="text" style="display:none">
+                <input type="hidden" name="_captcha" value="false">
             </form>
         </div>
 
