--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
             <form class="contact-form" action="https://formsubmit.io/send/jebacdisatetrisa2@wp.pl" onsubmit="return popMessage()" method="POST">
 
 
-                <p class="formHeader">Imię i nazwisko</p>
+                <!-- <p class="formHeader">Imię i nazwisko</p> -->
                 <input type="text" name="text" id="text" class="nameInput" required>
                 
-                <p class="formHeader">E-mail</p>
+                <!-- <p class="formHeader">E-mail</p> -->
                 <input type="email" name="email" id="email" class="emailInput" required>
 
-                <p class="formHeader">Wiadomość</p>
+                <!-- <p class="formHeader">Wiadomość</p> -->
                 <textarea class="message" name="message" id="message" required>Witam! Jestem zainteresowany usługami stolarskimi. Bardzo proszę o kontakt.</textarea>
             
                 <input class="submitBtn" type="submit" value="Prześlij">
