--- a/index.html
+++ b/index.html
@@ -73,23 +73,40 @@
 
         <div class="contact" id="contact">
             <h1 class="contactTitle">Kontakt</h1>
-            <form class="contact-form" action="https://formsubmit.io/send/jebacdisatetrisa2@wp.pl" onsubmit="return popMessage()" method="POST">
 
+            <form class="contact-form" action="https://formsubmit.io/send/jebacdisatetrisa2@wp.pl" method="POST">
 
                 <!-- <p class="formHeader">Imię i nazwisko</p> -->
-                <input type="text" name="text" id="text" class="nameInput" required>
+                <input type="text" 
+                        name="text" 
+                        id="text" 
+                        class="nameInput" 
+                        required>
                 
                 <!-- <p class="formHeader">E-mail</p> -->
-                <input type="email" name="email" id="email" class="emailInput" required>
+                <input 
+                    type="email" 
+                    name="email" 
+                    id="email" 
+                    class="emailInput" 
+                    required>
 
                 <!-- <p class="formHeader">Wiadomość</p> -->
-                <textarea class="message" name="message" id="message" required>Witam! Jestem zainteresowany usługami stolarskimi. Bardzo proszę o kontakt.</textarea>
+                <textarea 
+                    class="message" 
+                    name="message" 
+                    id="message" 
+                    required>
+                    Witam! Jestem zainteresowany usługami stolarskimi. 
+                    Bardzo proszę o kontakt.
+                </textarea>
             
-                <input class="submitBtn" type="submit" value="Prześlij">
-
+                <input 
+                    type="submit" 
+                    class="submitBtn" 
+                    value="Prześlij">
 
                 <input name="_formsubmit_id" type="text" style="display:none">
-                <input type="hidden" name="_captcha" value="false">
             </form>
         </div>
 
