--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     class="message" 
                     name="message" 
                     id="message" 
-                    required>Witam! Jestem zainteresowany usługami stolarskimi. Bardzo proszę o kontakt.
+                    required>Witam! Jestem zainteresowany usługami stolarskimi. Bardzo proszę o kontakt ebe ebe.
                 </textarea>
             
                 <input 
@@ -104,7 +104,7 @@
                     class="submitBtn" 
                     value="Prześlij">
 
-                <input name="_formsubmit_id" type="text" style="display:none">
+                <!-- <input name="_formsubmit_id" type="text" style="display:none"> -->
             </form>
         </div>
 
