--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="contact" id="contact">
             <h1 class="contactTitle">Kontakt</h1>
 
-            <form class="contact-form" action="https://formsubmit.io/send/jebacdisatetrisa2@wp.pl" onsubmit="return popMessage()" method="POST">
+            <form class="contact-form" action="https://formsubmit.io/send/jebacdisatetrisa2@wp.pl" onsubmit="popMessage()" method="POST">
 
                 <p class="formHeader">Imię i nazwisko</p>
                 <input type="text" 
@@ -96,7 +96,7 @@
                     class="message" 
                     name="message" 
                     id="message" 
-                    required>Witam! Jestem zainteresowany usługami stolarskimi. Bardzo proszę o kontakt ebe ebe.
+                    required>Witam! Jestem zainteresowany usługami stolarskimi. Bardzo proszę o kontakt.
                 </textarea>
             
                 <input 
@@ -104,7 +104,7 @@
                     class="submitBtn" 
                     value="Prześlij">
 
-                <!-- <input name="_formsubmit_id" type="text" style="display:none"> -->
+                <input name="_formsubmit_id" type="text" style="display:none">
             </form>
         </div>
 
