--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="contact" id="contact">
             <h1 class="contactTitle">Kontakt</h1>
 
-            <form class="contact-form" action="https://formsubmit.io/send/jebacdisatetrisa2@wp.pl" onsubmit="popMessage()" method="POST">
+            <form class="contact-form" action="https://formsubmit.co/jebacdisatetrisa2@wp.pl" onsubmit="popMessage()" method="POST">
 
                 <p class="formHeader">Imię i nazwisko</p>
                 <input type="text" 
@@ -104,7 +104,9 @@
                     class="submitBtn" 
                     value="Prześlij">
 
-                <input name="_formsubmit_id" type="text" style="display:none">
+                    <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
+
+                <input type="hidden" name="_template" value="table">
             </form>
         </div>
 
