--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                     value="Prześlij">
 
                     <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
+                    <input type="hidden" name="_captcha" value="false">
+
+                    <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/">
 
                 <input type="hidden" name="_template" value="table">
             </form>
