--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="contact" id="contact">
             <h1 class="contactTitle">Kontakt</h1>
 
-            <form class="contact-form" action="https://formsubmit.co/jebacdisatetrisa2@wp.pl" onsubmit="popMessage()" method="POST">
+            <form class="contact-form" action="https://formsubmit.co/3a2ea63b6c9bdfadb3028c740f37b8b8" onsubmit="popMessage()" method="POST">
 
                 <p class="formHeader">Imię i nazwisko</p>
                 <input type="text" 
@@ -107,7 +107,7 @@
                     <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
                     <input type="hidden" name="_captcha" value="false">
 
-                    <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/">
+                    <input type="hidden" name="_next" value="index.html">
 
                 <input type="hidden" name="_template" value="table">
             </form>
