--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
                     <input type="hidden" name="_captcha" value="false">
 
-                    <input type="hidden" name="_next" value="index.html">
+                    <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/index.html">
 
                 <input type="hidden" name="_template" value="table">
             </form>
