--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                     <!-- <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/index.html"> -->
 
-                <input type="hidden" name="_template" value="table">
+                <!-- <input type="hidden" name="_template" value="table"> -->
             </form>
         </div>
 
