--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
                         required>
                 
                 <p class="formHeader">E-mail</p>
-                <input 
+                <!-- <input 
                     type="email" 
                     name="email" 
                     id="email" 
                     class="emailInput" 
-                    required>
+                    required> -->
+
+                    <input type="email" name="email" placeholder="Email Address">
 
                 <p class="formHeader">Wiadomość</p>
                 <textarea 
