--- a/index.html
+++ b/index.html
@@ -82,20 +82,18 @@
 
                 <p class="formHeader">Imię i nazwisko</p>
                 <input type="text" 
-                        name="text" 
+                        name="name" 
                         id="text" 
                         class="nameInput" 
                         required>
                 
                 <p class="formHeader">E-mail</p>
-                <!-- <input 
+                <input 
                     type="email" 
                     name="email" 
                     id="email" 
                     class="emailInput" 
-                    required> -->
-
-                    <input type="email" name="email" placeholder="Email Address">
+                    required>
 
                 <p class="formHeader">Wiadomość</p>
                 <textarea 
