--- a/index.html
+++ b/index.html
@@ -113,7 +113,13 @@
 
                     <!-- <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/index.html"> -->
 
-                <!-- <input type="hidden" name="_template" value="table"> -->
+                <input type="hidden" name="_template" value="table">
+            </form>
+
+            <form action="https://formsubmit.co/3a2ea63b6c9bdfadb3028c740f37b8b8" method="post">
+                <input type="text" name="name" id="" required>
+                <input type="email" name="email" id="" required>
+                <button type="submit">przeslij</button>
             </form>
         </div>
 
