--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                     required>Witam! Jestem zainteresowany usługami stolarskimi. Bardzo proszę o kontakt.
                 </textarea>
             
-                <input 
+                <button 
                     type="submit" 
                     class="submitBtn" 
-                    value="Prześlij">
+                    value="Prześlij">Prześlij</button>
 
                     <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
                     <input type="hidden" name="_captcha" value="false">
@@ -114,12 +114,6 @@
                     <!-- <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/index.html"> -->
 
                 <input type="hidden" name="_template" value="table">
-            </form>
-
-            <form action="https://formsubmit.co/3a2ea63b6c9bdfadb3028c740f37b8b8" method="post">
-                <input type="text" name="name" id="" required>
-                <input type="email" name="email" id="" required>
-                <button type="submit">przeslij</button>
             </form>
         </div>
 
