--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <p class="formHeader">Imię i nazwisko</p>
                 <input type="text" 
                         name="name" 
-                        id="text" 
+                        id="" 
                         class="nameInput" 
                         required>
                 
@@ -91,7 +91,7 @@
                 <input 
                     type="email" 
                     name="email" 
-                    id="email" 
+                    id="" 
                     class="emailInput" 
                     required>
 
@@ -99,7 +99,7 @@
                 <textarea 
                     class="message" 
                     name="message" 
-                    id="message" 
+                    id="" 
                     required>Witam! Jestem zainteresowany usługami stolarskimi. Bardzo proszę o kontakt.
                 </textarea>
             
@@ -115,6 +115,12 @@
 
                 <input type="hidden" name="_template" value="table">
             </form>
+
+            <!-- <form action="https://formsubmit.co/3a2ea63b6c9bdfadb3028c740f37b8b8" method="post">
+                <input type="text" name="name" id="" required>
+                <input type="email" name="email" id="" required>
+                <button type="submit"></button>
+            </form> -->
         </div>
 
     </main>
