--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
             <form 
             class="contact-form" 
             action="https://formsubmit.co/3a2ea63b6c9bdfadb3028c740f37b8b8" 
-
             method="POST">
 
                 <p class="formHeader">Imię i nazwisko</p>
@@ -110,17 +109,12 @@
 
                     <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
                     <input type="hidden" name="_captcha" value="false">
+                    <input type="text" name="_honey" style="display:none">
 
                     <!-- <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/index.html"> -->
 
                 <input type="hidden" name="_template" value="table">
             </form>
-
-            <!-- <form action="https://formsubmit.co/3a2ea63b6c9bdfadb3028c740f37b8b8" method="post">
-                <input type="text" name="name" id="" required>
-                <input type="email" name="email" id="" required>
-                <button type="submit"></button>
-            </form> -->
         </div>
 
     </main>
