--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                     <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="text" name="_honey" style="display:none">
+                    <input type="hidden" name="_subject" value="Nowa wiadomość!">
 
                     <!-- <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/index.html"> -->
 
