--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <input type="text" name="_honey" style="display:none">
                     <input type="hidden" name="_subject" value="Nowa wiadomość!">
 
-                    <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/index.html">
+                    <input type="hidden" name="_next" value="https://elmaccho.github.io/Portfolio-Page/thankyou.html">
 
                 <input type="hidden" name="_template" value="table">
             </form>
