--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="user-info">
             <div class="user-image">
-                <img src="./profilephoto.png" class="profile-photo" alt="">
+                <img src="./profilephoto (3).png" class="profile-photo" alt="">
             </div>
             <div class="user-desc">
                 <p>Witam! <br>
